--- a/docs/plan/plan_20260209_1135.md
+++ b/docs/plan/plan_20260209_1135.md
@@ -89,12 +89,12 @@ sequenceDiagram
   ```javascript
   // Firebase初期化
   const firebaseConfig = {
-    apiKey: "AIzaSyDN8QXO_Aw57r-xHzT_mzCV8JVCwLBiNcM",
-    authDomain: "dsk-agentspace-trial.firebaseapp.com",
-    projectId: "dsk-agentspace-trial",
-    storageBucket: "dsk-agentspace-trial.firebasestorage.app",
-    messagingSenderId: "886325466422",
-    appId: "1:886325466422:web:e8abcab15947dd62b98f97"
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_AUTH_DOMAIN",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_STORAGE_BUCKET",
+    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+    appId: "YOUR_APP_ID"
   };
 
   // 認証関数
